--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "compass-mixins": "^0.12.12",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
@@ -18,6 +19,7 @@
     "@types/react": "^18.0.21",
     "eslint": "8.23.1",
     "eslint-config-next": "12.3.1",
+    "react-countdown": "^2.3.3",
     "sass": "^1.55.0",
     "typescript": "^4.8.4"
   }
