--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
   "devDependencies": {
     "@types/node": "^18.8.5",
     "@types/react": "^18.0.21",
+    "autoprefixer": "^10.4.12",
     "eslint": "8.23.1",
     "eslint-config-next": "12.3.1",
+    "postcss": "^8.4.18",
     "react-countdown": "^2.3.3",
     "sass": "^1.55.0",
+    "tailwindcss": "^3.2.1",
     "typescript": "^4.8.4"
   }
 }
