--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "server": "npx ts-node --project tsconfig.server.json server/index.ts"
   },
   "dependencies": {
     "compass-mixins": "^0.12.12",
     "next": "12.3.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "socket.io": "^4.5.3"
   },
   "devDependencies": {
     "@types/node": "^18.8.5",
@@ -23,7 +25,12 @@
     "postcss": "^8.4.18",
     "react-countdown": "^2.3.3",
     "sass": "^1.55.0",
+    "socket.io-client": "^4.5.3",
     "tailwindcss": "^3.2.1",
     "typescript": "^4.8.4"
+  },
+  "optionalDependencies": {
+    "bufferutil": "^4.0.7",
+    "utf-8-validate": "^5.0.10"
   }
 }
