--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "server": "npx ts-node --project tsconfig.server.json server/index.ts"
   },
   "dependencies": {
-    "compass-mixins": "^0.12.12",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -23,7 +22,7 @@
     "eslint": "8.23.1",
     "eslint-config-next": "12.3.1",
     "postcss": "^8.4.18",
-    "react-countdown": "^2.3.3",
+    "react-timer-hook": "^3.0.5",
     "sass": "^1.55.0",
     "socket.io-client": "^4.5.3",
     "tailwindcss": "^3.2.1",
