--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/react": "^1.0.0-beta.10",
     "compass-mixins": "^0.12.12",
     "next": "12.3.1",
     "react": "18.2.0",
