--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "server": "npx ts-node --project tsconfig.server.json server/index.ts"
+    "server": "nodemon"
   },
   "dependencies": {
     "@nextui-org/react": "^1.0.0-beta.10",
     "next": "12.3.1",
+    "nodemon": "^2.0.20",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "socket.io": "^4.5.3"
