--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "nodemon": "^2.0.20",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "socket.io": "^4.5.3"
+    "socket.io": "^4.5.3",
+    "use-timer": "^2.0.1"
   },
   "devDependencies": {
     "@types/node": "^18.8.5",
