--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-qr-code": "^2.0.8",
+    "react-router-dom": "^6.4.2",
     "socket.io": "^4.5.3",
     "use-timer": "^2.0.1"
   },
